--- a/주요 명령어.md
+++ b/주요 명령어.md
@@ -1,10 +1,30 @@
 # 주요 명령어
 
 ## 프로젝트 생성
-
 ```
     django-admin startproject 프로젝트명
 ```
+
+## 프로젝트 설정 파일 생성
+```
+    django-admin startproject config .
+```
+
+## templates 위치 선정
+```settings.py
+
+    # 프로젝트 경로 아래의 templates 경로 지정
+    TEMPLATES_DIR = BASE_DIR / 'templates'  # 프로젝트/templates
+    TEMPLATES = {
+        ...
+        'DIR': [TEMPLATES_DIR],
+
+
+        ...
+     }
+     
+```
+
 
 ## 애플리케이션 생성
 ```
