--- a/주요 명령어.md
+++ b/주요 명령어.md
@@ -10,7 +10,7 @@
     django-admin startproject config .
 ```
 
-## templates 위치 선정
+## templates 및 static 위치 선정
 ```settings.py
 
     # 프로젝트 경로 아래의 templates 경로 지정
@@ -22,6 +22,9 @@
 
         ...
      }
+
+    # 프로젝트 경로의 정적파일 경로
+    STATICFILES_DIRS = [BASE_DIR / 'static']
      
 ```
 
